Minor changes to buttons

--- a/res/layout/settings.json
+++ b/res/layout/settings.json
@@ -40,7 +40,7 @@
     },
     {
         "type": "title",
-        "title": "Gallery Style"
+        "title": "Camera Gallery Style"
     },
     {
         "type": "numeric",
