--- a/res/layout/settings.json
+++ b/res/layout/settings.json
@@ -30,14 +30,21 @@
     },
     {
         "type": "title",
-        "title": "Thumbnails Cahce"
+        "title": "App Style"
     },
     {
         "type": "numeric",
-        "title": "Max days",
-        "desc": "Delete cached thumbnails older than this",
+        "title": "Padding top",
+        "desc": "Empty space reserved above app widgets",
         "section": "openolyimageshare",
-        "key": "max_cache_age_days"
+        "key": "padding_top"
+    },
+    {
+        "type": "numeric",
+        "title": "Padding bottom",
+        "desc": "Empty space reserved under the app widgets",
+        "section": "openolyimageshare",
+        "key": "padding_bottom"
     },
     {
         "type": "title",
@@ -70,5 +77,16 @@
         "desc": "Set the size of icons on screen bottom",
         "section": "openolyimageshare",
         "key": "icon_size_bottom"
+    },
+    {
+        "type": "title",
+        "title": "Thumbnails Cahce"
+    },
+    {
+        "type": "numeric",
+        "title": "Max days",
+        "desc": "Delete cached thumbnails older than this",
+        "section": "openolyimageshare",
+        "key": "max_cache_age_days"
     }
 ]
